--- a/public/assets/style-prestamos.css
+++ b/public/assets/style-prestamos.css
@@ -494,17 +494,13 @@ nav ul li a:hover:before {
 
 
 /* Footer */
-
 footer {
-    height: 60px;
-    margin-top: 50px;
-    background-color: #4215ac;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
+  background-color: #1538ac;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  margin-top: 20px;
+  border-radius: 8px;
 }
 
 footer:hover {
