--- a/public/assets/style-reportes.css
+++ b/public/assets/style-reportes.css
@@ -358,8 +358,8 @@ nav ul li a:hover:before {
     transform: scale(1.05);
     box-shadow: 0 0 0 2px currentColor;
 }
+/*Reportes  */
 
-/* ===== REPORTES ===== */
 .Filtros-Reporte {
     background-color: #f8f9fa;
     padding: 20px;
@@ -463,15 +463,12 @@ nav ul li.active a:before {
 
 /* Footer */
 footer {
-    height: 60px;
-    margin-top: 50px;
-    background-color: #4215ac;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
+  background-color: #1538ac;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  margin-top: 20px;
+  border-radius: 8px;
 }
 
 footer:hover {
