--- a/public/assets/style-mienbros.css
+++ b/public/assets/style-mienbros.css
@@ -16,7 +16,7 @@
     color: white;
     font-size: 300%;
     padding-top: 5%;
-    font-family: 'Garamond';
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     margin: 0;
     align-items: center;
