--- a/public/assets/style-usuarios.css
+++ b/public/assets/style-usuarios.css
@@ -172,7 +172,8 @@ nav ul li a:hover:before {
     position: relative;           
     margin-right: -20px;   
     margin-top: -20px;              
-    z-index: 900;                      
+    z-index: 900;
+    font-family: 'Montserrat', sans-serif;                      
                 
     
 }
