--- a/public/assets/style-users.css
+++ b/public/assets/style-users.css
@@ -651,6 +651,31 @@ footer {
     .page-content-original .Uno-right h2 {
         font-size: 30px;
     }
+    
+}
+@media (min-width: 1025px) and (max-width: 1366px) {
+    nav ul li a {
+        display: flex;
+        align-items: center;
+        font-family: 'Montserrat', sans-serif;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 14px; 
+        color: #fff;
+        position: relative;
+        padding: 10px 0px 10px 15px; 
+        transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+    }
+    .Prueba { 
+        margin-top: -80px;
+    }
+    .Menu li a img,
+    .Prueba li a img { 
+         margin-right: 10px;
+         width: 24px;
+         height: 24px;
+        transition: all 0.3s ease;
+   }
 }
 
 @media (max-width: 992px) {
@@ -687,6 +712,9 @@ footer {
     .page-content-original .table td {
         padding: 10px 8px;
     }
+    
+
+
 }
 
 @media (max-width: 768px) {
