--- a/public/assets/style-grupos.css
+++ b/public/assets/style-grupos.css
@@ -594,26 +594,32 @@ footer:hover {
 }
 
 /* ===== MEDIA QUERIES ===== */
-@media (max-width: 1200px) {
-    .wrapper {
-        margin-left: 240px;
+@media (min-width: 1025px) and (max-width: 1366px) {
+    nav ul li a {
+        display: flex;
+        align-items: center;
+        font-family: 'Montserrat', sans-serif;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 14px; 
+        color: #fff;
+        position: relative;
+        padding: 10px 0px 10px 15px; 
+        transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
     }
-    .Menu {
-        height: 65%; 
+    .Prueba { 
+        margin-top: -80px;
     }
-    .Menu li a img {
-        margin: 3%;
-        height: 15%;
-        width: 15%;
-    }
-    .Prueba {
-        margin-top: 5%;
-    }
-    .Prueba li a img {
-        height: 15%;
-        width: 15%;
-        margin-right: 3%;
-    }
+    .Menu li a img,
+    .Prueba li a img { 
+         margin-right: 10px;
+         width: 24px;
+         height: 24px;
+        transition: all 0.3s ease;
+   }
+   .Encabezado h1 { font-size: 2.5rem; }
+    .Contenido { grid-template-columns: minmax(0, 1.8fr) minmax(300px, 1fr); } 
+    .table { min-width: 550px; }
 }
 
 @media (max-width: 992px) {
