--- a/public/assets/Style-equipos.css
+++ b/public/assets/Style-equipos.css
@@ -154,6 +154,7 @@ nav ul li a:hover:before { width: 95%; }
 }
 
 /* ===== CONTENIDO PRINCIPAL ===== */
+
 .Contenido {
     color: rgb(14, 13, 13);
     display: grid;
@@ -179,15 +180,22 @@ nav ul li a:hover:before { width: 95%; }
 }
 
 .Contenido-Dos { /* Contenedor del Formulario */
-    background-color: hsla(187, 85%, 79%, 0.953);
+   background-color: hsla(187, 85%, 79%, 0.953);
+    min-height: 75vh;
     border-radius: 25px;
-    min-height: 75vh; 
-    padding: 20px; /
-    display: flex; 
+    width: 90%;
+    box-shadow: 0 8px 18px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
     flex-direction: column;
-    width:90%;
     margin:0 auto;
 }
+.Contenido-Dos:hover {
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+    transform: translateY(-2px);
+}
+
 .Contenido-Dos h2 {
     color: rgb(34, 8, 150);
     font-size: 1.8rem; 
@@ -197,7 +205,7 @@ nav ul li a:hover:before { width: 95%; }
     flex-shrink: 0; 
 }
 
-/* ===== BOTONES (dentro de Contenido-Uno) ===== */
+/* ===== BOTONES ===== */
 .Botones-Contenido {
     display: grid; 
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
@@ -485,7 +493,7 @@ footer:hover { background-color: #1538ac; }
     .table td:last-child { border-bottom: none; }
     
     
-    .table td[data-label="Activo Fijo:"] {} /
+    .table td[data-label="Activo Fijo:"] {} 
 
     .Contenedor { 
        
